# rust-linker

./: .gitignore  .gitmodules  Cargo.toml  Makefile  NOTES.txt  README.md  build.py
.github/workflows/: build.yml
cli/: Cargo.toml
cli/src/: main.rs
examples/: dynamic_print.rs  link-test.rs  read.rs  write.rs  write_dynamic.rs
link/: Cargo.toml
link/src/: error.rs  lib.rs  loader.rs  module.rs
link/src/aot/: block_section.rs  blocks.rs  config.rs  data.rs  disassemble.rs  dynamics.rs  mod.rs  reader.rs  relocations.rs  segments.rs  statics.rs  target.rs  utils.rs
link/src/dynamic/: blocks.rs  disassemble.rs  dynamic_linker.rs  libraries.rs  memory.rs  mod.rs  relocations.rs  section.rs  segment.rs  table.rs  version.rs
link/src/format/: disassemble.rs  mod.rs  relocations.rs
link/src/linker/: block_section.rs  disassemble.rs  mod.rs  reader.rs  relocations.rs  target.rs
link/tests/: link-test.rs
scripts/: findlib.py
src/: disassemble.rs  error.rs  lib.rs  main.rs  process_maps.rs  segment.rs
src/linker/: block_section.rs  blocks.rs  dynamic_linker.rs  libraries.rs  linker.rs  mod.rs  reader.rs  relocations.rs  table.rs  target.rs  version.rs
src/writer/: blocks.rs  dynamics.rs  mod.rs  section.rs  segments.rs  statics.rs
testfiles/: asdf.c  asdf2.c  call_extern.c  globals.c  initialize.c  invoke_print.c  link_shared.c  live.c  print_main.c  print_main1.c  print_main2.c  print_string.c  print_stuff.c  sdltest.c  segfault.c  segfault_handle.c  segfault_handle2.c  simplefunction.c  start.c  testfunction.c  uvtest.c
tests/: link-test.rs
(+5 files in other folders)
