[package]
name = "link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = "^0.11"
object = { git = "https://github.com/rrx/object.git", branch = "updates-for-linker", features = ["write"] }
memmap = "^0.7"
im = "^15"
libloading = "^0.7"
linked_list_allocator = "^0.10"
libc = "*"
proc-maps = "^0.3"
log = "0.4"
binary-heap-plus = "0.5.0"
pretty-hex = "^0.3"
clap = { version = "^4.1", features = ["derive"] }
env_logger = "0.9"

[dev-dependencies]
test-log = { git = "https://github.com/rrx/test-log.git" }

[lib]
name = "link"
crate_type = ["dylib", "rlib", "staticlib"]
